# ANT

./: .gitattributes  .gitignore  CNAME  README.md  brain_check.py  config.yml  config_methods.yml  environment.yaml  pyproject.toml  requirements.txt
ant/: __init__.py  realtime_nf.py  simulate_eeg_raw.py  simulation.py
ant/tools/: __init__.py  orica.py  simulation.py  tools.py
config/: config.yml
data/sample/: SL_method_delays.csv  method_delays.csv  sample_data.vhdr  sample_data.vmrk
default_params/: default_params.yml
docs/: ant.html  ant.tools.html  api.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/_downloads/58bc73634f1bf25f1c7889dce89e7fdf/: plot_method_delays.py
docs/_sources/: ant.tools.rst.txt  index.rst.txt  sg_execution_times.rst.txt
docs/_sources/auto_examples/: pl2ot_nf_realtime.rst.txt  plot_sl_method_delays.rst.txt
docs/auto_examples/: index.html  pl2ot_nf_realtime.html  plot_method_delays.html  plot_nf_realtime.html  plot_sl_method_delays.html  sg_execution_times.html
docs/source/: ant.rst  api.rst  conf.py  index.rst  modules.rst  references.bib  sg_execution_times.rst
docs/source/_static/: custom.css
docs/source/auto_examples/: index.rst  pl2ot_nf_realtime.codeobj.json  plot_method_delays.ipynb  plot_method_delays.py  plot_method_delays.py.md5  (+12 more)
examples/: GALLERY_HEADER.rst  README.rst  example_1.ipynb
figures/: default_params.yml
notebooks/: demo.ipynb  demo.py  example_1.ipynb  test.ipynb
source/: conf.py  index.rst
src/: compute_nf.py  default_params.yml  nf_realtime.py  realtime_nf.py  simulate_eeg_raw.py  tools.py
src/ant/: __init__.py  realtime_nf.py
tools/: __init__.py  tools.py
(+36 files in other folders)
