[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ANT"
version = "0.1.0"
description = "Advancing neurofeedback tinnitus"
authors = [
    { name = "Payam S. Shabestari", email = "payam.sadeghi74@email.com" }
]
dependencies = []
requires-python = ">=3.8"