[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ANT"
version = "0.1.0"
description = "Advancing neurofeedback tinnitus"
authors = [
    { name = "Payam S. Shabestari", email = "payam.sadeghi74@email.com" }
]
dependencies = [
    'mne>=1.4.2',
    'numpy>=1.21,<3',
    'pyqtgraph',
    'qtpy',
    'scipy',
]
license = {file = 'LICENSE'}
maintainers = [
    {email = 'payam.sadeghi74@email.com', name = 'Payam S. Shabestari'},
]
name = 'ANT'
readme = 'README.md'
requires-python = '>=3.10'