[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ANT"
version = "0.1.0"
description = "Advancing neurofeedback tinnitus"
authors = [
    { name = "Payam S. Shabestari", email = "payam.sadeghi74@email.com" }
]
dependencies = [
    "mne>=1.4.2",
    "numpy>=1.21,<3",
    "scipy",
    "pyqtgraph",
    "qtpy",
    "fooof",
    "pyunlocbox",
    "mne-lsl",
    "mne-connectivity",
    "mne-features",
    "pyyaml",
    "padasip",
    "mne-icalabel",
    "PyQt6"
]
license = {file = 'LICENSE'}
maintainers = [
    {email = 'payam.sadeghi74@gmail.com', name = 'Payam S. Shabestari'},
]
readme = 'README.md'
requires-python = '>=3.10'

[tool.setuptools.packages.find]
where = ["src"]